# EITL_Sysmon

./: README.md
sysmon_eitl_analytic/: README.md  pyproject.toml
sysmon_eitl_analytic/configs/: default.yaml  roles.yaml  thresholds.yaml
sysmon_eitl_analytic/data/feedback/: labels_example.csv
sysmon_eitl_analytic/docs/: reason_codes.md  triage_schema.md
sysmon_eitl_analytic/notebooks/: 01_build_profiles.ipynb  02_score_uncertainty.ipynb  03_routing_simulation.ipynb  04_analyst_packet_examples.ipynb
sysmon_eitl_analytic/scripts/: export_triage.py  generate_synthetic_sysmon.py  run_pipeline.py  simulate_eitl.py
sysmon_eitl_analytic/sysmon_pipeline/: __init__.py  config.py  enrich.py  graph.py  ingest.py  profile.py  schema.py  sequence.py
sysmon_eitl_analytic/sysmon_pipeline/eitl/: __init__.py  active_learning.py  feedback_store.py  packets.py
sysmon_eitl_analytic/sysmon_pipeline/evaluation/: __init__.py  ablation.py  curves.py  metrics.py
sysmon_eitl_analytic/sysmon_pipeline/routing/: __init__.py  capacity.py  explain.py  policy.py
sysmon_eitl_analytic/sysmon_pipeline/scoring/: __init__.py  calibrate.py  drift.py  outlier.py  risk.py  rules.py
sysmon_eitl_analytic/sysmon_pipeline/uncertainty/: __init__.py  aggregate.py  boundary.py  density.py  disagreement.py
